--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<link rel="icon" type="image/svg+xml" href="../favicon.svg" />
+	<link rel="icon" type="image/svg+xml" href="favicon.svg" />
 
 	<title>Random Clock | Vanilla JS Projects</title>
 	<style>
@@ -23,8 +23,8 @@
 		}
 	</style>
 
-  <link rel="stylesheet" crossorigin href="../assets/pico.css">
-  <link rel="stylesheet" crossorigin href="../assets/spacing.css">
+  <link rel="stylesheet" crossorigin href="pico.css">
+  <link rel="stylesheet" crossorigin href="spacing.css">
 </head>
 
 <body class="container">
